--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zecoryx-tools",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "type": "module",
   "bin": {
     "zecoryx": "./bin/cli.js"
@@ -14,5 +14,9 @@
     "fs-extra": "^11.2.0",
     "inquirer": "^9.2.12",
     "ora": "^7.0.1"
-  }
+  },
+  "files": [
+    "bin/",
+    "src/"
+  ]
 }
