--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zecoryx-tools",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "type": "module",
   "bin": {
     "zecoryx": "./bin/cli.js"
@@ -9,11 +9,15 @@
     "start": "node ./bin/cli.js"
   },
   "dependencies": {
+    "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "execa": "^8.0.1",
+    "figlet": "^1.10.0",
     "fs-extra": "^11.2.0",
+    "gradient-string": "^3.0.0",
     "inquirer": "^9.2.12",
-    "ora": "^7.0.1"
+    "ora": "^7.0.1",
+    "update-notifier": "^7.3.1"
   },
   "files": [
     "bin/",
