--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.3",
   "type": "module",
   "bin": {
-    "zecoryx": "./bin/cli.js"
+    "zecoryx": "bin/cli.js"
   },
   "scripts": {
     "start": "node ./bin/cli.js"
