--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zecoryx-tools",
-  "version": "1.1.3",
+  "name": "zecoryx-cli",
+  "version": "0.0.2",
   "type": "module",
   "bin": {
     "zecoryx": "bin/cli.js"
